Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
   <dt>Markdown in HTML</dt>
   <dd>Does *not* work **very** well. Use HTML <em>tags</em>.</dd>
-</dl><p><a href="https://www.codenvy.com/factory?v=1.0">CodeNow</a></p>
+</dl><p><a href="https://www.codenvy.com/factory?v=1.0"><img src="http://github.com/unicorn.png" alt="alt"></a></p>
 
 
 
